# compbio

./: .gitignore  Cargo.toml  README.md
extra/: rosalind_lcsm.txt
src/: burrows_wheeler.rs  consensus_profile.rs  edit.rs  glob.rs  lcs.rs  lcs_splicing.rs  lcs_splicing_tb.rs  lcs_stree.rs  lib.rs  local.rs  my_trie.rs  orf.rs  perfect_matchings_rna.rs  splicing.rs  suffix_array.rs  suffix_tree.rs  trie.rs  utils.rs
